# video-processing-workshop

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
code/: 01-introduction.ipynb
codecs/: README.md
