[project]
name = "video-processing-workshop"
version = "0.1.0"
description = "A comprehensive resource for diving deep into the fascinating world of digital video processing. Whether you're starting from the basics or looking to refine your advanced skills, this workshop provides hands-on guidance and clear explanations"
authors = [
    { name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com" },
]
maintainers = [
    { name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com" },
]
keywords = [
    "DVP",
    "digital video processing",
    "video processing",
    "media processing",
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "assets/original/LICENSE"]
requires-python = ">=3.14.5"
dependencies = [
    "av>=17.0.1,<18.0.0",
    "ImageIO>=2.37.3,<3.0.0",
    "ipykernel>=7.2.0,<8.0.0",
    "ipympl>=0.10.0,<1.0.0",
    "ipywidgets>=8.1.8,<9.0.0",
    "matplotlib>=3.10.9,<4.0.0",
    "numpy>=2.4.6,<3.0.0",
    "opencv-python>=4.13.0.92,<5.0.0",
    # "python-ffmpeg>=2.0.12,<3.0.0",
    "scipy>=1.17.1,<2.0.0",
]

[project.urls]
Repository = "https://github.com/mr-pylin/video-processing-workshop"
MyHomepage = "https://mr-pylin.github.io"

[tool.black]
line-length = 120
